Grok changes
************

1.14 (unreleased)
=================

- Nothing changed yet.


1.13 (2015-06-04)
=================

- Advertise the ``ObjectEditedEvent`` from grokcore.content.


1.12 (2014-10-20)
=================

- Add ``grok.queryAnnotation()`` and ``grok.deleteAnnotation()`` from
  ``grokcore.annotation``.


1.11.3 (2013-04-03)
===================

- Fixed application_url() calls to use keyword arguments where the API
  defines keyword arguments.

1.11.2 (2013-04-03)
===================

- Fix brown paper bag release where not all resources were included. Again.

1.11.1 (2013-04-03)
===================

- Fix brown paper bag release where not all resources were included.

1.11 (2013-04-03)
=================

- Update ``grok.util.application_url()`` to work correctly with
  ``grokcore.view.util.url()``.

1.10.3 (2012-05-10)
===================

- Make sure the correct layout is retrieved for layout aware form components
  too.

1.10.2 (2012-05-10)
===================

- Import the grokcore.layout.layout directive into the grok namespace too.

1.10.1 (2012-05-02)
===================

- Update version requirements.

1.10 (2012-05-02)
=================

- Split off the Application component and the local_utility directive to
  grokcore.site. A backwards compatibility import for Application is left
  in place.

- Split off the catalog and indexing components from grok into
  grokcore.catalog.

- The permissions() directive, the Permission component and the Role
  component moved from grok to grokcore.security. The grok package imports
  these component, so they can still be accessed through the grok api.

1.9 (2011-09-06)
================

- Added imports for `querySubscriptions()`, `queryMultiSubscriptions()`,
  `queryOrderedSubscriptions()` and `queryOrderedMultiSubscriptions()` functions
  that complement the Subscriptions and MultiSubscriptions components.

1.8 (2011-07-14)
================
