@@ -4,7 +4,11 @@ Grok changes
 1.14 (unreleased)
 =================
 
-- Nothing changed yet.
+- Advertise the ``install_on`` directive from grokcore.site.
+
+- When the ``IApplicationInitializedEvent`` is triggered the new
+  application will be current Zope local site. The site is restored
+  after the event.
 
 
 1.13 (2015-06-04)
